--- a/css/styles.css
+++ b/css/styles.css
@@ -278,17 +278,8 @@ footer {
     color: #fff;
 }
 
+/* Стили для мобильных устройств */
 @media (max-width: 768px) {
-    .bio {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .bio img {
-        width: 100px;
-        height: 100px;
-    }
-
     header {
         padding: 0.5rem 1rem; /* Уменьшаем отступы */
         flex-direction: column; /* Размещаем элементы вертикально */
@@ -317,5 +308,8 @@ footer {
         width: 25px; /* Еще больше уменьшаем логотип */
         height: 25px;
     }
-}
 
+    nav#menu ul li a {
+        font-size: 1.2rem; /* Уменьшаем размер текста в меню */
+    }
+}
