--- a/css/styles.css
+++ b/css/styles.css
@@ -90,6 +90,7 @@ header {
 }
 
 /* Стили для выпадающего меню */
+/* Стили для выпадающего меню */
 nav#menu {
     position: fixed;
     top: 0;
@@ -101,7 +102,11 @@ nav#menu {
     padding-top: 6rem; /* Отступ сверху, чтобы шапка профиля оставалась видимой */
     text-align: center;
     display: none; /* Меню скрыто по умолчанию */
-    z-index: 999; /* Чтобы меню было поверх всего контента, кроме шапки */
+    z-index: 999; /* Чтобы меню было поверх всего контента */
+}
+
+nav#menu:not(.hidden) {
+    display: block; /* Показываем меню, если класс hidden удален */
 }
 
 nav#menu ul {
