--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,8 @@ nav#menu {
     align-items: center; /* Центрируем по вертикали */
     z-index: 999; /* Чтобы меню было поверх всего контента */
     overflow: auto; /* Добавляем прокрутку, если контент не помещается */
+    margin: 0; /* Убираем внешние отступы */
+    padding: 0; /* Убираем внутренние отступы */
 }
 
 nav#menu.hidden {
