--- a/css/styles.css
+++ b/css/styles.css
@@ -199,9 +199,13 @@ nav#menu ul li a:hover {
 }
 
 footer {
-    margin-top: auto;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
     text-align: center;
-    padding: 1rem 0;
-    background-color: var(--secondary-color);
+    padding: 0.5rem 0;
+    background-color: transparent;
     color: #fff;
+    font-size: 0.7rem;
 }
