--- a/css/styles.css
+++ b/css/styles.css
@@ -199,10 +199,7 @@ nav#menu ul li a:hover {
 }
 
 footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
+    margin-top: auto;
     text-align: center;
     padding: 0.5rem 0;
     background-color: transparent;
