--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@ html, body {
     box-sizing: border-box;
     overflow-x: hidden; /* Убираем горизонтальную прокрутку */
     height: 100%; /* Гарантирует правильное поведение высоты */
+    background-color: var(--background-color); /* Белый фон только у body */
 }
 
 /* Цветовая палитра */
@@ -42,7 +43,7 @@ body {
 header {
     position: sticky;
     top: 0;
-    z-index: 1000;
+    z-index: 1000; /* Чтобы шапка была поверх контента */
     background-color: transparent; /* Полностью прозрачный фон */
     padding: 0.5rem 1rem;
     display: flex;
@@ -50,6 +51,7 @@ header {
     align-items: center;
     border: none; /* Убираем границы */
     box-shadow: none; /* Убираем тень */
+    backdrop-filter: none; /* Отключаем эффект блюра */
 }
 
 /* Текст в шапке */
