--- a/css/styles.css
+++ b/css/styles.css
@@ -212,9 +212,8 @@ nav#menu ul li a:hover {
 
 /* Футер */
 footer {
-    position: absolute; /* Позиционируем внизу страницы */
-    bottom: 0;
-    left: 0;
+    position: relative; /* Размещаем футер внизу контента */
+    margin-top: auto; /* Футер всегда внизу */
     width: 100%;
     text-align: left;
     padding: 0.5rem 0 0.5rem 1rem;
