--- a/css/styles.css
+++ b/css/styles.css
@@ -212,14 +212,11 @@ nav#menu ul li a:hover {
 
 /* Футер */
 footer {
-    position: fixed; /* Размещаем футер внизу контента */
-    margin-top: auto; /* Футер всегда внизу */
+    margin-top: auto; /* Футер всегда внизу контента */
     width: 100%;
     text-align: left;
     padding: 0.5rem 0 0.5rem 1rem;
-    background-color: transparent;
-    color: #333; /* Очень светлый серый цвет */
+    background-color: transparent; /* Полностью прозрачный фон */
+    color: #333; /* Темный цвет текста для видимости */
     font-size: 0.7rem;
-    opacity: 0; /* Скрытый изначально */
-    transition: opacity 0.3s ease; /* Анимация появления */
 }
