--- a/css/styles.css
+++ b/css/styles.css
@@ -220,3 +220,9 @@ footer {
     color: #333; /* Темный цвет текста для видимости */
     font-size: 0.7rem;
 }
+
+/* Основной контент */
+main.gallery {
+    margin-bottom: 2rem; /* Отступ снизу для контента */
+    border: 1px solid blue; /* Для отладки */
+}
