--- a/css/styles.css
+++ b/css/styles.css
@@ -168,8 +168,7 @@ nav#menu ul li a:hover {
     align-items: center;
     gap: 1rem;
     overflow-y: auto;
-    max-height: 100vh;
-    margin-top: 0; /* Убедитесь, что у gallery нет лишнего отступа сверху */
+    margin-top: 0;
 }
 
 .gallery img {
@@ -184,6 +183,21 @@ nav#menu ul li a:hover {
 @media (max-width: 768px) {
     header {
         padding: 0.5rem;
+
+    }
+
+    footer {
+        padding: 0.5rem 0 0.5rem 0.5rem;
+        font-size: 0.6rem;
+    }
+
+    .gallery img {
+        max-width: 100%;
+        width: 80%;
+    }
+
+    .gallery .info {
+        font-size: 0.9rem;
     }
 
     .profile .name .first-name,
@@ -204,15 +218,28 @@ nav#menu ul li a:hover {
 
 /* Очень маленькие экраны */
 @media (max-width: 480px) {
+    footer {
+        padding: 0.5rem 0 0.5rem 0.3rem;
+        font-size: 0.5rem;
+    }
+    
     .profile .name .first-name,
     .profile .name .last-name {
         font-size: 1.5rem;
+    }
+
+    .gallery img {
+        width: 90%;
+    }
+
+    .gallery .info {
+        font-size: 0.8rem;
     }
 }
 
 /* Футер */
 footer {
-    margin-top: 20px; /* Отступ сверху */
+    margin-top: 20px;
     width: 100%;
     text-align: left;
     padding: 0.5rem 0 0.5rem 1rem;
