--- a/css/styles.css
+++ b/css/styles.css
@@ -244,7 +244,7 @@ footer {
     text-align: left;
     padding: 0.5rem 0 0.5rem 1rem;
     background-color: transparent;
-    color: #333;
+    color: #f0f0f0;
     font-size: 0.7rem;
 }
 
