--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,9 @@ html, body {
     overflow-x: hidden;
     height: 100%;
     background-color: var(--background-color);
-    margin-right: 0 !important;
-    padding-right: 0 !important;
+    margin-right: 0;
+    padding-right: 0;
+    scrollbar-gutter: stable; /* Фиксируем положение скроллбара */
 }
 
 /* Webkit (Chrome, Safari) */
