--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,8 @@ body::-webkit-scrollbar {
 
 html::-webkit-scrollbar-track,
 body::-webkit-scrollbar-track {
-    background: transparent;
+    background: #f1f1f1;
+    border-radius: 10px;
     margin: 0;
     padding: 0;
     border: 0;
@@ -55,7 +56,7 @@ body::-webkit-scrollbar-thumb:hover {
 /* Firefox */
 html {
     scrollbar-width: thin;
-    scrollbar-color: rgba(0, 0, 0, 0.5) #f1f1f1; /* Скорректирован цвет */
+    scrollbar-color: rgba(0, 0, 0, 0.5) transparent; /* Скорректирован цвет */
     scrollbar-gutter: stable;
 }
 
